Header z-index fix

--- a/dev/static/stylus/modules/header.styl
+++ b/dev/static/stylus/modules/header.styl
@@ -1,6 +1,7 @@
 .header
     position sticky 
     top 0
+    z-index 3
     padding-top 12px
     padding-bottom 12px
     margin-bottom 40px
